<resources>
    <string name="app_name">Film_for_evening</string>
    <string name="lock_stock_and_two_smoking_barrels">Lock, Stock and Two Smoking Barrels</string>
    <string name="genre">Genre:</string>
    <string name="film_genre">film genre</string>
    <string name="country">Country:</string>
    <string name="countryValue">country</string>
    <string name="duration">Duration:</string>
    <string name="durationValue">Duration</string>
    <string name="descriptionValue">blablabla</string>
    <string name="description">Description:</string>
    <string name="film_name">film name</string>
    <string name="poster">Poster</string>
    <string name="horrors">Horrors</string>
    <string name="cartoons">Cartoons</string>
    <string name="error">Error!</string>
    <string name="reload">Reload</string>
    <string name="rating">Rating:</string>
    <string name="rating_value">rating</string>
</resources>