<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <SearchView
            android:id="@+id/sv_mainFrag_filmSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:iconifiedByDefault="false"
            android:queryHint="Какой фильм найти?"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_mainFrag_filmName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/lock_stock_and_two_smoking_barrels"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@+id/sv_mainFrag_filmSearch" />

        <TextView
            android:id="@+id/tv_mainFrag_genre"
            style="@style/InfoText"
            android:text="@string/genre"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_mainFrag_filmName" />

        <TextView
            android:id="@+id/tv_mainFrag_genreValue"
            style="@style/InfoText"
            android:hint="@string/film_genre"
            app:layout_constraintStart_toEndOf="@+id/tv_mainFrag_genre"
            app:layout_constraintTop_toBottomOf="@+id/tv_mainFrag_filmName" />

        <TextView
            android:id="@+id/tv_mainFrag_country"
            style="@style/InfoText"
            android:text="@string/country"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_mainFrag_genre" />

        <TextView
            android:id="@+id/tv_mainFrag_countryValue"
            style="@style/InfoText"
            android:layout_marginTop="8dp"
            android:hint="@string/countryValue"
            app:layout_constraintStart_toEndOf="@+id/tv_mainFrag_country"
            app:layout_constraintTop_toBottomOf="@+id/tv_mainFrag_genre" />

        <TextView
            android:id="@+id/tv_mainFrag_duration"
            style="@style/InfoText"
            android:text="@string/duration"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_mainFrag_country" />

        <TextView
            android:id="@+id/tv_mainFrag_durationValue"
            style="@style/InfoText"
            android:hint="@string/durationValue"
            app:layout_constraintStart_toEndOf="@+id/tv_mainFrag_duration"
            app:layout_constraintTop_toBottomOf="@+id/tv_mainFrag_country" />

        <TextView
            android:id="@+id/tv_mainFrag_description"
            style="@style/InfoText"
            android:text="@string/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_mainFrag_duration" />

        <TextView
            android:id="@+id/tv_mainFrag_descriptionValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descriptionValue"
            android:textSize="20sp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_mainFrag_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/loadingLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80FFFFFF"
        android:visibility="gone"
        tools:layout_editor_absoluteX="-33dp"
        tools:layout_editor_absoluteY="-16dp"
        tools:visibility="visible">

        <ProgressBar
            style="@android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>

</FrameLayout>