<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_item_film"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="15dp"
    app:cardElevation="3dp">

    <LinearLayout
        android:id="@+id/ll_item_film_review"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_item_poster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/poster" />

        <TextView
            android:id="@+id/tv_item_film_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/film_name" />

        <TextView
            android:id="@+id/tv_item_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/film_genre" />

    </LinearLayout>

</androidx.cardview.widget.CardView>